# Handy

./: README.md
Linux/: CMakeLists.txt
Linux/pySlicer/: pySlicer.py
Linux/pySlicer/Resources/Icons/: pySlicer.psd
Linux/pySlicer/Resources/UI/: pySlicer.ui
Windows/: CMakeLists.txt
Windows/pySlicer/: CMakeLists.txt
